--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        <%- htmlWebpackPlugin.options.title -%>
+        <%= '[dev] ' + htmlWebpackPlugin.options.title %>
     </title>
 </head>
 
