--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    hello world
+    <div class="b:solid;1;blue-50">
+        <p>world</p>
+    </div>
+   
+    <!-- hello world -->
 </body>
 
 </html>
