--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>
-        <%= '[dev] ' + htmlWebpackPlugin.options.title %>
-    </title>
-</head>
+    <head class="dark">
+        <title>
+            <%= '[dev] ' + htmlWebpackPlugin.options.title %>
+        </title>
+    </head>
 
-<body>
-    <div class="bg:1;center;2">
-        <p>world</p>
-    </div>
-   
-    <!-- hello world -->
-</body>
+    <body>
+        <h1 class="font:48 font:heavy f:red:hover">hello world</h1>
+        <button class="btn">Submit</button>
+    </body>
 
 </html>
