init group style

--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1 class="font:48 font:heavy f:red:hover">hello world</h1>
-        <button class="btn">Submit</button>
+        <button class="btn {bg:red-60|font:20!|text:center|block}.active@sm">Submit</button>
     </body>
 
 </html>
