feat: `;` to `|` and use `;` in group ( Sorry, it's a breaking change. )

--- a/dev/src/index.html
+++ b/dev/src/index.html
@@ -8,8 +8,8 @@
     </head>
 
     <body>
-        <h1 class="font:48 font:heavy f:red:hover">hello world</h1>
-        <button class="btn {bg:red-60|font:20!|text:center|block}.active@sm">Submit</button>
+        <h1 class="font:48 font:heavy f:red:hover p:10|20|30">hello world</h1>
+        <button class="btn {bg:red-60;font:20!;text:center;block}@sm">Submit</button>
     </body>
 
 </html>
