refactor: replace `init(config)` api with `new MasterCSS(config)`

--- a/examples/browser/index.html
+++ b/examples/browser/index.html
@@ -7,7 +7,7 @@
     <script>
         window.masterCSSConfig = {
             colors: {
-                brand: '#ff0000'
+                primary: '#ff0000'
             }
         }
     </script>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 class="font:40 font:heavy italic m:50 text:center fg:brand">Hello World</h1>
+    <h1 class="font:40 font:heavy italic m:50 text:center fg:primary">Hello World</h1>
 </body>
 
 </html>
