Example(CSS): Fix packages

--- a/examples/webpack/src/index.html
+++ b/examples/webpack/src/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body class="bg:gray-10 fg:white font:sans p:50|80 m:0">
-    <h1 class="text:center color:indigo-65">
+    <h1 class="text:center color:indigo-65 border:input">
         Master CSS
     </h1>
     <p class="font:20 line-height:1.5 fg:red">
