Fix(Compiler): Import user config file path problem

--- a/examples/webpack/src/index.html
+++ b/examples/webpack/src/index.html
@@ -10,7 +10,7 @@
     <h1 class="text:center color:indigo-65 border:input">
         Master CSS
     </h1>
-    <p class="font:20 line-height:1.5 fg:red">
+    <p class="font:20 line-height:1.5 fg:red bg:foo">
         Compile Master CSS ahead of time with zero-configuration integration with build tools
     </p>
 </body>
