Fix(Vite): Dev server's `index.html` isn't scanned on startup

--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app" class="bg:gray"></div>
     <script type="module" src="/src/main.ts"></script>
     <!-- <style>@import 'master.css'</style> -->
 </body>
