--- a/examples/svelte-kit/src/app.html
+++ b/examples/svelte-kit/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg:gray-90 fg:red">
+	<body data-sveltekit-preload-data="hover" class="bg:gray-90 fg:green@md">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
