Update(Vite): Scan sources and inject with `virtual:master.css`

--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="app" class="bg:gray"></div>
+    <div id="app" class="bg:blue-60"></div>
     <script type="module" src="/src/main.ts"></script>
     <!-- <style>@import 'master.css'</style> -->
 </body>
