--- a/examples/webpack/src/index.html
+++ b/examples/webpack/src/index.html
@@ -6,11 +6,11 @@
     <title>Master CSS AOT in Webpack</title>
 </head>
 
-<body class="bg:gray-10 fg:white font:sans p:50|80 m:0">
+<body class="bg:cyan-30 fg:white font:sans p:50|80 m:0">
     <h1 class="text:center color:indigo-65 border:input">
         Master CSS
     </h1>
-    <p class="font:20 line-height:1.5 fg:red bg:foo">
+    <p class="font:20 line-height:1.5 fg:blue bg:foo">
         Compile Master CSS ahead of time with zero-configuration integration with build tools
     </p>
 </body>
