--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
-</head>
-
-<body>
-    <div id="app" class="bg:blue-60"></div>
+    <title>Vite + TS</title>
+  </head>
+  <body class="bg:gray-10">
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <!-- <style>@import 'master.css'</style> -->
-</body>
-
+  </body>
 </html>
