--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Vite + Master CSS</title>
   </head>
   <body class="bg:gray-10">
     <div id="app"></div>
