--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Master CSS</title>
-  </head>
-  <body class="bg:gray-10">
-    <div id="app"></div>
+</head>
+
+<body>
+    <div id="app">
+        <div>
+            <div class="flex center-content">
+                <a href="https://vitejs.dev" target="_blank">
+                    <img src="/vite.svg" class="logo" alt="Vite logo" />
+                </a>
+                <a href="https://css.master.co" target="_blank">
+                    <img src="/master.svg" class="logo 172x172" alt="Master logo" />
+                </a>
+            </div>
+            <h1 class="font:sans ls:.25">Vite v4 + Master CSS v2</h1>
+            <div class="card">
+                <button id="counter" type="button" class="~transform|.3s translateY(-5):hover"></button>
+            </div>
+            <p class="read-the-docs">
+                Click on the Vite and Master CSS logos to learn more
+            </p>
+        </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
+
 </html>
