Fix(Compiler): Read the new configuration instead of from the cache

--- a/examples/webpack/src/index.html
+++ b/examples/webpack/src/index.html
@@ -6,7 +6,7 @@
     <title>Master CSS AOT in Webpack</title>
 </head>
 
-<body class="bg:red-30 fg:white font:sans p:50|80 m:0">
+<body class="bg:primary fg:white font:sans p:50|80 m:0">
     <h1 class="text:center color:indigo-65 border:input">
         Master CSS
     </h1>
