Example(Svelte): Use group feature `{'{fg:red}>li:first'}`

--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -19,7 +19,7 @@
                     <img src="/master.svg" class="logo 172x172" alt="Master logo" />
                 </a>
             </div>
-            <h1 class="font:sans ls:.25 fg:primary">Vite v4 + Master CSS v2</h1>
+            <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
             <div class="card">
                 <button id="counter" type="button" class="~transform|.3s translateY(-5):hover"></button>
             </div>
