Test(Vite): Extract & Build & Dev

--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -16,12 +16,12 @@
                     <img src="/vite.svg" class="logo" alt="Vite logo" />
                 </a>
                 <a href="https://css.master.co" target="_blank">
-                    <img src="/master.svg" class="logo 172x172" alt="Master logo" />
+                    <img src="/master.svg" class="logo 172x172 acm61ljoo" alt="Master logo" />
                 </a>
             </div>
             <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
             <div class="card">
-                <button id="counter" type="button" class="~transform|.3s translateY(-5):hover"></button>
+                <button id="counter" type="button"></button>
             </div>
             <p class="read-the-docs">
                 Click on the Vite and Master CSS logos to learn more
