--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -11,7 +11,7 @@
             }
         }
     </script>
-    <script src="../../dist/index.browser.js"></script>
+    <script src="../../node_modules/@master/css/dist/index.browser.js"></script>
 </head>
 
 <body>
