Example(React): Use the latest Master CSS React API and add a theme switching example

--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -8,9 +8,9 @@
     <title>Vite + React</title>
 </head>
 
-<body>
+<body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
