--- a/examples/react/index.html
+++ b/examples/react/index.html
@@ -8,7 +8,7 @@
     <title>Vite + React</title>
 </head>
 
-<body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
+<body class="bg:gray-10@dark bg:slate-95@light fg:white@dark fg:slate-20@light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
