Fix(CSS): Invalid browser ESM version

--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -11,11 +11,14 @@
             }
         }
     </script>
-    <script src="../../node_modules/@master/css/dist/index.browser.js"></script>
+    <script src="https://cdn.master.co/css@beta"></script>
+    <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
+    <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta">
+    <link rel="preload" as="script" href="https://cdn.master.co/css@beta">
 </head>
 
 <body>
-    <h1 class="font:40 font:heavy italic m:50 text:center fg:primary">Hello World</h1>
+    <h1 class="fg:primary">Hello World</h1>
 </body>
 
 </html>
