--- a/examples/cdn/esm.html
+++ b/examples/cdn/esm.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
-    <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta">
-    <link rel="modulepreload" href="https://cdn.master.co/css@beta">
+    <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta" crossorigin="anonymous">
+    <link rel="modulepreload" href="https://cdn.master.co/css@beta" crossorigin="anonymous">
     <script type="module">
         import { MasterCSS } from 'https://cdn.master.co/css@beta'
         new MasterCSS({
