Fix: `SyntaxError: Unexpected token 'export'` #183

--- a/examples/cdn/esm.html
+++ b/examples/cdn/esm.html
@@ -8,7 +8,7 @@
     <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta" crossorigin="anonymous">
     <link rel="modulepreload" href="https://cdn.master.co/css@beta" crossorigin="anonymous">
     <script type="module">
-        import { MasterCSS } from 'https://cdn.master.co/css@beta'
+        import { MasterCSS } from 'https://cdn.master.co/css@beta/dist/index.mjs'
         new MasterCSS({
             colors: {
                 primary: '#ff0000'
