Update the CDN example

--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 class="fg:primary">Hello World</h1>
+    <h1 class="fg:primary m:50 text:center font:sans font:heavy font:48">Hello World</h1>
 </body>
 
 </html>
