Test(JIT): Make sure JIT mode doesn't throw errors on page load

--- a/examples/jit/index.html
+++ b/examples/jit/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="display: none">
 
 <head>
     <meta charset="utf-8">
@@ -11,7 +11,7 @@
             }
         }
     </script>
-    <script src="../../../node_modules/@master/css/dist/index.browser.js"></script>
+    <script src="/main.ts" type="module"></script>
 </head>
 
 <body>
