--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -16,7 +16,7 @@
                     <img src="/vite.svg" class="logo" alt="Vite logo" />
                 </a>
                 <a href="https://css.master.co" target="_blank">
-                    <img src="/master.svg" class="logo 172x172 hmr-test" alt="Master logo" />
+                    <img src="/master.svg" class="logo 172x172 btn1680549536551" alt="Master logo" />
                 </a>
             </div>
             <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
