--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -20,7 +20,7 @@
                 </a>
             </div>
             <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
-            <div class="card">
+            <div class="card hmr-test">
                 <button id="counter" type="button"></button>
             </div>
             <p class="read-the-docs">
