--- a/examples/svelte-with-ahead-of-time/src/app.html
+++ b/examples/svelte-with-ahead-of-time/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="display: none;">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
