--- a/examples/cdn-esm/index.html
+++ b/examples/cdn-esm/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
     <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta" crossorigin="anonymous">
-    <link rel="modulepreload" href="https://cdn.master.co/css@beta" crossorigin="anonymous">
+    <link rel="modulepreload" href="https://cdn.master.co/css@beta/dist/index.mjs" crossorigin="anonymous">
     <script type="module">
         import { MasterCSS } from 'https://cdn.master.co/css@beta/dist/index.mjs'
         new MasterCSS({
