--- a/examples/vite/index.html
+++ b/examples/vite/index.html
@@ -21,7 +21,7 @@
             </div>
             <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
             <div class="card hmr-test">
-                <button id="counter" type="button"></button>
+                <button id="counter" type="button" class="btn fg:white"></button>
             </div>
             <p class="read-the-docs">
                 Click on the Vite and Master CSS logos to learn more
