--- a/packages/compiler/tests/watch/index.html
+++ b/packages/compiler/tests/watch/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1 class="font:heavy font:48 btn hmr-test">Hello World</h1>
+    <h1 class="font:heavy font:48 btn f:96">Hello World</h1>
     <button class="bg:primary">Submit</button>
 </body>
 </html>
