--- a/examples/webpack-with-ahead-of-time/src/index.html
+++ b/examples/webpack-with-ahead-of-time/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
 </head>
+
 <body>
-    <h1 class="font:40 font:heavy italic m:50 text:center">
+    <h1 class="fg:primary font:40 font:heavy italic m:50 text:center">
         Hello World
     </h1>
 </body>
+
 </html>
