--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="display: none">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preload" as="script" href="https://cdn.master.co/css@beta">
+    <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta">
+    <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
     <script>
         window.masterCSSConfig = {
             colors: {
@@ -12,13 +15,10 @@
         }
     </script>
     <script src="https://cdn.master.co/css@beta"></script>
-    <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
-    <link rel="preload" as="style" href="https://cdn.master.co/normal.css@beta">
-    <link rel="preload" as="script" href="https://cdn.master.co/css@beta">
 </head>
 
 <body>
-    <h1 class="fg:primary m:50 text:center font:sans font:heavy font:48">Hello World</h1>
+    <h1 class="font:40 font:heavy italic m:50 text:center">Hello World</h1>
 </body>
 
 </html>
