--- a/examples/vite-with-runtime-rendering/index.html
+++ b/examples/vite-with-runtime-rendering/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en" style="display: none">
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
+    <title>Master CSS Runtime Rendering in Vite</title>
+</head>
+
+<body>
     <div id="app">
         <div>
             <div class="flex center-content">
@@ -16,9 +18,14 @@
                     <img src="/master.svg" class="logo 172x172" alt="Master logo" />
                 </a>
             </div>
-            <h1 class="font:sans ls:.25 fg:white">Vite v4 + Master CSS v2</h1>
-            <div class="card hmr-test">
-                <button id="counter" type="button" class="btn fg:white"></button>
+            <h1
+                class="font:sans ls:-.25 fg:white@dark font:heavy">
+                <span class="gradient-text bg:linear-gradient(120deg,#bd34fe|30%,#41d1ff)">Vite</span>
+                <span class="fg:slate-70 mx:10 font:semibold">+</span>
+                <span>Master CSS</span>
+            </h1>
+            <div class="card">
+                <button id="counter" type="button" class="fg:white@dark"></button>
             </div>
             <p class="read-the-docs">
                 Click on the Vite and Master CSS logos to learn more
@@ -26,5 +33,6 @@
         </div>
     </div>
     <script type="module" src="src/main.ts"></script>
-  </body>
+</body>
+
 </html>
