--- a/examples/react-with-progressive-rendering/index.html
+++ b/examples/react-with-progressive-rendering/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
+    <title>Master CSS Progressive Rendering in React</title>
+</head>
+
+<body>
     <div id="app"><!--app-html--></div>
-    <script type="module" src="/src/entry-client.jsx"></script>
-  </body>
+    <script type="module" src="src/main.ts"></script>
+</body>
+
 </html>
