--- a/examples/vite-with-runtime-rendering/index.html
+++ b/examples/vite-with-runtime-rendering/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Master CSS Runtime Rendering in Vite</title>
 </head>
