--- a/examples/react-with-runtime-rendering/index.html
+++ b/examples/react-with-runtime-rendering/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Master CSS Runtime Rendering in React</title>
+    <link href="./src/index.css" rel="stylesheet" />
 </head>
 
-<body class="bg:gray-10@dark bg:slate-95@light fg:white@dark fg:slate-20@light">
+<body class="bg:gray-10@dark bg:slate-90@light fg:white@dark fg:slate-20@light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
