--- a/examples/react-with-progressive-rendering/index.html
+++ b/examples/react-with-progressive-rendering/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Master CSS Progressive Rendering in React</title>
+    <link href="./src/index.css" rel="stylesheet" />
 </head>
 
-<body>
-    <div id="app"><!--app-html--></div>
-    <script type="module" src="src/main.ts"></script>
+<body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
+    <div id="root"><!--app-html--></div>
+    <script type="module" src="/src/entry-client.tsx"></script>
 </body>
 
 </html>
