New: `@master/css.vue`, including `CSSProvider`

--- a/examples/vue-with-runtime-rendering/index.html
+++ b/examples/vue-with-runtime-rendering/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="en" style="display: none">
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue + TS</title>
-  </head>
-  <body>
+    <title>Master CSS Runtime Rendering in Vue</title>
+</head>
+
+<body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+</body>
+
 </html>
