Fix(Extractor Webpack): All mods aren't rebuilt on config/options reset

--- a/examples/webpack-with-static-extraction/src/index.html
+++ b/examples/webpack-with-static-extraction/src/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1 class="fg:green font:40 font:heavy italic m:50 text:center">
+    <h1 class="fg:sky font:40 font:heavy italic m:50 text:center">
         Hello World
     </h1>
 </body>
