--- a/examples/webpack-with-static-extraction/src/index.html
+++ b/examples/webpack-with-static-extraction/src/index.html
@@ -1,14 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Master CSS Static Extraction in Webpack</title>
 </head>
 
 <body>
-    <h1 class="fg:sky font:40 font:heavy italic m:50 text:center">
-        Hello World
-    </h1>
+    <div class="abs inset:0 m:auto w:fit h:fit text:center">
+        <div class="flex center-content">
+            <a href="https://vitejs.dev" target="_blank">
+                <img src="/vite.svg" class="logo" alt="Vite logo" />
+            </a>
+            <a href="https://css.master.co" target="_blank">
+                <img src="/master.svg" class="logo 172x172" alt="Master logo" />
+            </a>
+        </div>
+        <h1 class="font:sans ls:-.25 fg:white@dark font:heavy">
+            <span class="gradient-text bg:linear-gradient(120deg,#bd34fe|30%,#41d1ff)">Vite</span>
+            <span class="fg:slate-70 mx:10 font:semibold">+</span>
+            <span>Master CSS</span>
+        </h1>
+        <p>
+            Click on the Vite and Master CSS logos to learn more
+        </p>
+    </div>
 </body>
 
 </html>
