--- a/examples/react-with-progressive-rendering/index.html
+++ b/examples/react-with-progressive-rendering/index.html
@@ -11,7 +11,7 @@
 
 <body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
     <div id="root"><!--app-html--></div>
-    <script type="module" src="/src/entry-client.tsx"></script>
+    <script type="module" src="/src/entry-client.jsx"></script>
 </body>
 
 </html>
