--- a/examples/esm.sh/index.html
+++ b/examples/esm.sh/index.html
@@ -11,7 +11,7 @@
         import { initRuntime } from 'https://esm.sh/@master/css@beta'
         initRuntime({
             colors: {
-                primary: '#ff0000'
+                primary: '#000000'
             }
         })
     </script>
