--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -10,7 +10,7 @@
     <script>
         window.masterCSSConfig = {
             colors: {
-                primary: '#ff0000'
+                primary: '#000000'
             }
         }
     </script>
