--- a/examples/eslint/collision.html
+++ b/examples/eslint/collision.html
@@ -1,5 +1,5 @@
 <!-- eslint-disable @master/css/class-order -->
-<div class="m:10 m:40 m:50 m:60 m:20 m:30:hover m:40@dark">
+<div class="m:10 m:40 m:50 m:60 m:20 m:40@sm m:60@sm m:30:hover m:40@dark">
     ...
 </div>
 
