--- a/examples/eslint/order.html
+++ b/examples/eslint/order.html
@@ -1,4 +1,2 @@
-<div class="font:12 font:24@sm m:32 block font:32@md mb:48">
-    ...
-</div>
+<div class="font:12 font:24@sm m:32 block font:32@md mb:48">...</div>
 
