--- a/examples/cdn/index.html
+++ b/examples/cdn/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.master.co/normal.css@beta">
     <script>
         window.masterCSSConfig = {
-            colors: {
+            variables: {
                 primary: '#000000'
             }
         }
