--- a/examples/esm.sh/index.html
+++ b/examples/esm.sh/index.html
@@ -10,7 +10,7 @@
     <script type="module">
         import { initRuntime } from 'https://esm.sh/@master/css@beta'
         initRuntime({
-            colors: {
+            variables: {
                 primary: '#000000'
             }
         })
