Add: `class RuntimeCSS`

--- a/examples/react-with-progressive-rendering/index.html
+++ b/examples/react-with-progressive-rendering/index.html
@@ -9,7 +9,7 @@
     <link href="./src/index.css" rel="stylesheet" />
 </head>
 
-<body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
+<body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
     <div id="root"><!--app-html--></div>
     <script type="module" src="/src/entry-client.jsx"></script>
 </body>
