--- a/examples/vue.js-with-progressive-rendering/index.html
+++ b/examples/vue.js-with-progressive-rendering/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
+    <body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
         <div id="app"><!--app-html--></div>
         <script type="module" src="/src/entry-client.js"></script>
     </body>
