--- a/examples/vue.js-with-runtime-rendering/index.html
+++ b/examples/vue.js-with-runtime-rendering/index.html
@@ -8,7 +8,7 @@
     <title>Master CSS Runtime Rendering in Vue</title>
 </head>
 
-<body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
+<body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
