--- a/examples/react-with-runtime-rendering/index.html
+++ b/examples/react-with-runtime-rendering/index.html
@@ -9,7 +9,7 @@
     <link href="./src/index.css" rel="stylesheet" />
 </head>
 
-<body class="bg:gray-10@dark fg:white@dark fg:slate-20@light">
+<body class="bg:gray-10@dark bg:white@light fg:white@dark fg:slate-20@light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
 </body>
