Example: Add **Angular v17** example

--- a/examples/angular-with-runtime-rendering/src/index.html
+++ b/examples/angular-with-runtime-rendering/src/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
-<html style="display: none" lang="en">
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Master CSS Runtime Rendering in Angular</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8">
+  <title>AngularWithRuntimeRendering</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
-    <app-root></app-root>
+  <app-root></app-root>
 </body>
-
 </html>
