--- a/examples/angular-with-runtime-rendering/src/index.html
+++ b/examples/angular-with-runtime-rendering/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" styles="display:none">
 <head>
   <meta charset="utf-8">
   <title>AngularWithRuntimeRendering</title>
