Update image sizes in HTML files

--- a/examples/vite-with-runtime-rendering/index.html
+++ b/examples/vite-with-runtime-rendering/index.html
@@ -16,7 +16,7 @@
                     <img src="/vite.svg" class="logo" alt="Vite logo" />
                 </a>
                 <a href="https://css.master.co" target="_blank">
-                    <img src="/master.svg" class="logo 172x172" alt="Master logo" />
+                    <img src="/master.svg" class="logo size:172|172" alt="Master logo" />
                 </a>
             </div>
             <h1
