--- a/examples/webpack-with-static-extraction/src/index.html
+++ b/examples/webpack-with-static-extraction/src/index.html
@@ -11,10 +11,10 @@
         <div class="h:fit">
             <div class="flex center-content gap:30">
                 <a href="https://webpack.js.org" target="_blank">
-                    <img src="<%= require('/assets/webpack.svg') %>" class="110x110" alt="Webpack logo" />
+                    <img src="<%= require('/assets/webpack.svg') %>" class="size:110" alt="Webpack logo" />
                 </a>
                 <a href="https://css.master.co" target="_blank">
-                    <img src="<%= require('/assets/master.svg') %>" class="172x172" alt="Master logo" />
+                    <img src="<%= require('/assets/master.svg') %>" class="size:172" alt="Master logo" />
                 </a>
             </div>
             <h1 class="font:48 font:sans ls:-.25 fg:white@dark font:heavy">
