Update classNames in code linting and layout components

--- a/packages/css/tests/keyframes/index.html
+++ b/packages/css/tests/keyframes/index.html
@@ -11,52 +11,52 @@
     <div class="demo grid-cols:3 grid-cols:4@md gap:12">
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@fade|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @fade|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @fade|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@ping|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @ping|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @ping|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@flash|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @flash|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @flash|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@heart|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @heart|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @heart|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@jump|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @jump|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @jump|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@pulse|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @pulse|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @pulse|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@rotate|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @rotate|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @rotate|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@shake|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @shake|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @shake|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@zoom|1s|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @zoom|1s|infinite b:5|solid|blue-60 my:50!"></div>
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @zoom|1s|infinite b:5|solid|blue-60 my:12x!"></div>
             </div>
         </div>
         <div class="flex center-content w:full my:10">
             <div class="inline t:center"><code class="font:12 lh:4.5">@float|3s|ease-in-out|infinite</code>
-                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @float|3s|ease-in-out|infinite b:5|solid|blue-60 my:50!">
+                <div class="w:80 h:80 bg:blue-60/.2 r:5 m:auto @float|3s|ease-in-out|infinite b:5|solid|blue-60 my:12x!">
                 </div>
             </div>
         </div>
