--- a/examples/esm.sh/index.html
+++ b/examples/esm.sh/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 class="fg:primary font:40 font:heavy italic m:50 text:center">Hello World</h1>
+    <h1 class="fg:primary font:40 font:heavy italic m:12x text:center">Hello World</h1>
 </body>
 
 </html>
