--- a/packages/extractor/tests/action/b.html
+++ b/packages/extractor/tests/action/b.html
@@ -1,1 +1,1 @@
-<h1 class="m:50 text:center font:sans font:heavy font:48">Hello World</h1>
+<h1 class="m:12x text:center font:sans font:heavy font:48">Hello World</h1>
