Update CSS rules and color variables

--- a/packages/server/tests/add-colors-by-theme/template.html
+++ b/packages/server/tests/add-colors-by-theme/template.html
@@ -1,3 +1,4 @@
-<div class="**light**">
-    <div class="bg:**primary**">…</div>
-</div>
+<html class="**light**">
+-    <body class="bg:#fff@light bg:#000@dark">…</body>
++    <body class="bg:primary">…</body>
+</html>
