Fix(Runtime): Browser ESM doesn't be bundled

--- a/examples/cdn/iife.html
+++ b/examples/cdn/iife.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 class="font:40 font:heavy italic m:12x text:center">Hello World</h1>
+    <h1 class="fg:primary font:40 font:heavy italic m:12x text:center">Hello World</h1>
 </body>
 
 </html>
