--- a/examples/esm.sh/index.html
+++ b/examples/esm.sh/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preload" as="style" href="https://esm.sh/@master/normal.css@rc?css">
     <link rel="stylesheet" href="https://esm.sh/@master/normal.css@rc?css">
-    <link rel="modulepreload" href="https://esm.sh/@master/css-runtime@rc">
+    <link rel="modulepreload" href="https://esm.sh/@master/css-runtime@rc/+esm">
     <script type="module">
-        import { initCSSRuntime } from 'https://esm.sh/@master/css-runtime@rc'
+        import { initCSSRuntime } from 'https://esm.sh/@master/css-runtime@rc/+esm'
         initCSSRuntime({
             variables: {
                 primary: '#000000'
