Update syntax colors and color conversion functions

--- a/packages/language-service/tests/edit-syntax-colors.html
+++ b/packages/language-service/tests/edit-syntax-colors.html
@@ -10,4 +10,4 @@
 <div class="fg:lch(50%|72|50)"></div>
 <div class="fg:oklab(50%|0.1|0.11)"></div>
 <div class="fg:oklch(40%|0.1|21)"></div>
-<div class="fg:white"></div>
+<div class="fg:black"></div>
