--- a/packages/language-service/tests/edit-syntax-colors.html
+++ b/packages/language-service/tests/edit-syntax-colors.html
@@ -1,6 +1,6 @@
 <div class="bg:blue"></div>
 <div class="fg:black"></div>
-<div class="fg:#ff2244"></div>
+<div class="fg:#bdff2263"></div>
 <div class="bg:blue-50/.5"></div>
 <div class="fg:rgb(0|255|145)"></div>
 <div class="fg:rgba(255|0|0/.5)"></div>
@@ -9,5 +9,6 @@
 <div class="fg:hwb(12|50%|10%)"></div>
 <div class="fg:lab(52%|40|60)"></div>
 <div class="fg:lch(50%|72|50)"></div>
-<div class="fg:oklab(50%|0.1|0.11)"></div>
+<div class="fg:oklab(69%|-0.0605|0.1408)"></div>
 <div class="fg:oklch(40%|0.1|21)"></div>
+<div class="fg:color(display-p3|1|0.5|0)"></div>
