Improve(Language Service): Rely on reliable selector sources and improve prompt item ordering

--- a/packages/language-service/playground/edit-syntax-colors.html
+++ b/packages/language-service/playground/edit-syntax-colors.html
@@ -12,3 +12,5 @@
 <div class="fg:oklab(69%|-0.0605|0.1408)"></div>
 <div class="fg:oklch(40%|0.1|21)"></div>
 <div class="fg:color(display-p3|1|0.5|0)"></div>
+
+<script src="https://cdn.master.co/css-runtime@rc"></script>
