--- a/packages/language-service/playground/index.html
+++ b/packages/language-service/playground/index.html
@@ -3,3 +3,5 @@
 <div class='shadow:1|1|2|black,2|2|3|white'></div>
 <div class='gradient(black,white)'></div>
 <div class='bg:linear-gradient(black,white)'></div>
+
+<script src="https://cdn.master.co/css-runtime@rc"></script>
