Update syntax completion hint and sorting test

--- a/packages/language-service/playground/hint-syntax-completions.html
+++ b/packages/language-service/playground/hint-syntax-completions.html
@@ -1,3 +1,1 @@
-<div class="text:center"></div>
-
-<script src="https://cdn.master.co/css-runtime@rc"></script>
+<div class="text:center::backdrop:active"></div>
