--- a/packages/language-service/playground/hint-syntax-completions.html
+++ b/packages/language-service/playground/hint-syntax-completions.html
@@ -1,1 +1,3 @@
-<div class="text:center"></div>
+<div class="text:center bg:blue-"></div>
+<div class="bg:amber-5"></div>
+<div class="bg:blue"></div>
